# PolyglotX

./: LICENSE  MANIFEST.in  README.md  index.html  package.sh  pyproject.toml  setup.py
PolyglotX/: __init__.py
PolyglotX/cli/: __init__.py  batch_processor.py  commands.py  interactive.py
PolyglotX/core/: __init__.py  context_manager.py  error_processor.py  exception_handler.py  language_detector.py  translator.py
PolyglotX/handlers/: __init__.py  error_formatter.py  hook_manager.py  output_handler.py  signal_handler.py
PolyglotX/languages/: __init__.py  arbe.py  de.py  es.py  fr.py  hi.py  ja.py  ku.py  pt.py  ru.py  tr.py  zh.py
PolyglotX/translators/: __init__.py  cache_manager.py  engine_manager.py  fallback_handler.py  quality_checker.py
PolyglotX/utils/: __init__.py  analyzers.py  converters.py  decorators.py  helpers.py  validators.py
